<resources>
    <string name="app_name">CaZaIt</string>
    <string name="action_settings">Settings</string>
    <string name="bnt_next">다음</string>
    <string name="sign_in">LOGIN</string>
    <string name="hint_username">Username</string>
    <string name="hint_id">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_do_login">로그인 하기</string>
    <string name="btn_sign_up">회원가입</string>
    <string name="btn_find_id">아이디 찾기</string>
    <string name="btn_find_id_verify">인증하기</string>
    <string name="btn_find_password">비밀번호 찾기</string>
    <string name="sign_in_logo">메인 로고</string>
    <string name="sign_in_slash">/</string>
    <string name="find_id_text1">회원님의 아이디는</string>
    <string name="find_id_text2">입니다.</string>
    <string name="find_id_check">확인</string>
    <string name="please_input_id">아이디를 입력해주세요.</string>
    <string name="please_input_phoneNum">휴대폰 번호를 입력해주세요.</string>
    <string name="please_input_verifyNum">인증번호를 입력해주세요.</string>
    <string name="find_password_check_id">아이디 확인</string>
    <string name="find_password">새 비밀번호</string>
    <string name="find_password_check">새 비밀번호 확인</string>
    <string name="find_password_join">변경하기</string>
    <string name="find_password_done">변경이 완료되었습니다.</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="change_nickname">닉네임 변경</string>
    <string name="sign_up_sign_up">회원가입</string>
    <string name="sign_up_id">아이디</string>
    <string name="sign_up_hint_id_example">예: cazait1234</string>
    <string name="sign_up_double_check">중복확인</string>
    <string name="sign_up_password">비밀번호</string>
    <string name="sign_up_hint_password">비밀번호를 입력해주세요</string>
    <string name="sign_up_password_check">비밀번호 확인</string>
    <string name="sign_up_hint_password_more">비밀번호를 한 번 더 입력해주세요</string>
    <string name="sign_up_nick_name">닉네임</string>
    <string name="sign_up_hint_nick_name">예:카자잇123</string>
    <string name="sign_up_phone_number">휴대폰 인증</string>
    <string name="sign_up_hint_phone_number">예) 01012345678</string>
    <string name="sign_up_phone_number_send_code">인증번호 전송</string>
    <string name="sign_up_phone_number_send_code_again">재전송</string>
    <string name="sign_up_verification_code">인증번호</string>
    <string name="sign_up_hint_verification_code">인증번호 입력</string>
    <string name="sign_up_check_verification_code">인증번호확인</string>
    <string name="sign_up_join">가입하기</string>
    <string name="sign_up_req_all">회원정보를 전부 입력하세요.</string>
    <string name="sign_up_req_suc">가입되었습니다.</string>
    <string name="sign_up_req_nopw">비밀번호가 일치하지 않습니다.</string>
    <string name="sign_up_check_id">아이디를 입력해주세요.</string>
    <string name="sign_up_check_id_regex">아이디 양식이 맞지 않습니다.</string>
    <string name="sign_up_check_nick">닉네임을 입력해주세요.</string>
    <string name="sign_up_check_nick_regex">한글 또는 영어로 3~15자로 조합해주세요.</string>
    <string name="sign_up_check_pw">비밀번호를 입력해주세요.</string>
    <string name="sign_up_check_pw_regex">영문/숫자/특수문자(공백 제외)으로 8~16자로 조합해주세요.</string>
    <string name="sign_up_check_pw_not">비밀번호가 일치하지 않습니다.</string>
    <string name="sign_up_check_phone">휴대폰 번호를 입력해주세요.</string>
    <string name="sign_up_check_verify">인증번호를 입력해주세요.</string>
    <string name="agree_title">약관 동의</string>
    <string name="agree_all">약관 전체동의</string>
    <string name="agree_essential">필수</string>
    <string name="agree_location_see">위치정보 기반 서비스 이용약관 내용 보기  ></string>
    <string name="agree_privacy_see">개인정보 수집 및 이용 동의 내용 보기  ></string>
    <string name="agree_please">필수 약관 동의를 모두 동의해주세요.</string>
    <string name="search">카페명을 입력해주세요.</string>
    <string name="search_hint">search</string>
    <string name="favorite_stores">찜한 매장</string>
    <string name="favorite_stores_guide">찜한 매장을 빠르게 확인!</string>
    <string name="do_checking_cafe">카페 확인하기</string>
    <string name="filter_type_distance">거리순</string>
    <string name="distance">%dm</string>
    <string name="info_cafename">제주몰빵</string>
    <string name="info_cafeadd">서울특별시 광진구 광나루로 375-1 2층(군자동)</string>
    <string name="info_cafemenu">카페메뉴</string>
    <string name="info_caferev">평점 및 후기</string>
    <string name="info_cafemap">매장 위치 확인 ></string>
    <string name="info_review">리뷰쓰기</string>
    <string name="no_menu">아직 준비된 메뉴가 없어요..😢</string>
    <string name="no_review">아직 등록된 리뷰가 없어요..ㅠ\n❤️리뷰 등록해줘잉❤️</string>
    <string name="need_login">로그인이 필요한 서비스입니다.</string>
    <string name="review_edit">수정</string>
    <string name="review_delete">삭제</string>
    <string name="review_report">신고</string>
    <string name="menu_name">아메리카노</string>
    <string name="menu_price">1,500</string>
    <string name="menu_won">원</string>
    <string name="menu_desc">우리나라 원두를 사용하여 더욱 달달한 풍미가 살아있는 최고급 아메리카노</string>
    <string name="review_user">뚜벅초</string>
    <string name="review_content">카페 분위기가 너무 좋아요. 또 오고 싶어요. 사장님 잘생겼어용.</string>
    <string name="no_data">데이터가 없습니다</string>
    <string name="unknown_error">알 수 없는 이유의 에러</string>
    <string name="state_free">여유</string>
    <string name="state_normal">보통</string>
    <string name="state_close">영업 종료</string>
    <string name="state_crowded">혼잡</string>
    <string name="state_very_crowded">매우 혼잡</string>
    <string name="guide_need_location_permission">이 앱을 사용하기 위해 위치 권한을 필요로 합니다.</string>
    <string name="guide_error_default">오류가 발생했습니다.</string>
    <string name="cazait_pay">카자잇 페이</string>
    <string name="money_won">원</string>
    <string name="content_des_coupon">쿠폰 확인 페이지</string>
    <string name="coupon">쿠폰</string>
    <string name="payment_history">결제 내역</string>
    <string name="recent_view_store">최근 본 매장</string>
    <string name="content_des_recent_view_store">최근 본 매장</string>
    <string name="content_des_payment_history">결제 내역</string>
    <string name="content_des_back_button">뒤로 가기 버튼</string>
    <string name="content_des_edit_review">리뷰 작성 버튼</string>
    <string name="edit_review">리뷰 쓰기</string>
    <string name="guide_edit_rating">카페는 어떠셨나요? 별점을 남겨주세요.</string>
    <string name="guide_edit_review">다른 이용자를 위해 카페 리뷰를 남겨주세요.</string>
    <string name="guide_hint_edit_review">공백 포함 50자 이내로 작성해주세요.</string>
    <string name="edit">작성하기</string>
    <string name="sign_in_kor">로그인</string>
    <string name="sign_out_kor">로그아웃</string>
    <string name="see_more_verified">공지사항</string>
    <string name="see_more_headset">고객센터</string>
    <string name="see_more_setting">계정 관리</string>
    <string name="see_more_badge">약관 및 정책</string>
    <string name="search_text1"><![CDATA["]]></string>
    <string name="search_text2"><![CDATA[" 검색 결과]]></string>
    <string name="search_body">검색할 내용</string>
    <string name="customer_service_email">이메일</string>
    <string name="customer_service_email_address">kazait123@kazait.com</string>
    <string name="customer_service_phone">고객센터 번호</string>
    <string name="customer_service_phone_number">010–1234-5678</string>
    <string name="terms_location">위치정보 기반 서비스 이용약관</string>
    <string name="terms_privacy">개인정보 수집 및 이용 동의</string>
    <string name="location_terms_all_text">약관 텍스트가 너무 길어서인지 형식이 안맞아서 인지 담아지지 않음</string>
    <string name="privacy_terms_all_text">약관 텍스트가 너무 길어서인지 형식이 안맞아서 인지 담아지지 않음</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_not_provide">서비스 제공 예정입니다.</string>
    <string name="sign_in_error">접속 에러입니다.</string>
    <string name="sign_up_check_nick_long">닉네임이 너무 길어요</string>
    <string name="sign_up_check_nick_short">닉네임이 너무 짧아요</string>
</resources>