<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_beige"
        tools:context=".ui.findaccount.findpassword.FindUserPasswordFragment">

        <include
            android:id="@+id/cl_top"
            layout="@layout/layout_page_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_findPassword_id"
            style="@style/TextValue_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="41dp"
            android:text="@string/sign_up_id"
            android:textColor="@color/main_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_top" />

        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="3dp"
            android:text="@string/hint_id"
            android:textColor="@color/main_black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_findPassword_id" />

        <TextView
            android:id="@+id/tv_find_password"
            style="@style/TextValue_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="28dp"
            android:text="@string/find_password"
            android:textColor="@color/main_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_id" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_find_password_insert"
            style="@style/TextValue_B"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/rectangle_white_r50"
            android:hint="@string/sign_up_hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="17dp"
            android:textColorHint="@color/edit_text_hint"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_find_password"
            app:passwordToggleEnabled="true"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/tv_find_password_check"
            style="@style/TextValue_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="27dp"
            android:text="@string/find_password_check"
            android:textColor="@color/main_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_find_password_insert" />

        <EditText
            android:id="@+id/et_find_password_insert_more"
            style="@style/TextValue_B"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/rectangle_white_r50"
            android:hint="@string/sign_up_hint_password_more"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="17dp"
            android:textColorHint="@color/edit_text_hint"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_find_password_check"
            app:passwordToggleEnabled="true"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_find_password_join"
            style="@style/TextValue_B"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/round_orange_rectangle"
            android:backgroundTint="@color/main_black"
            android:text="@string/find_password_join"
            android:textAlignment="center"
            android:textColor="@color/main_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_find_password_insert_more" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>