<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_back"
        tools:context=".ui.signin.SignInFragment">

        <include
            android:id="@+id/cl_top"
            layout="@layout/layout_page_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="167dp"
            android:contentDescription="@string/sign_in_logo"
            android:src="@drawable/login_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_text"
            style="@style/TextValue_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="74dp"
            android:text="@string/sign_in"
            android:textColor="@color/main_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />

        <EditText
            android:id="@+id/et_id"
            style="@style/TextValue_B"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rectangle_white_r50"
            android:hint="@string/hint_id"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textColor="@color/main_black"
            android:textColorHint="@color/edit_text_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_text" />

        <EditText
            android:id="@+id/et_password"
            style="@style/TextValue_B"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="password"
            android:background="@drawable/rectangle_white_r50"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textColor="@color/main_black"
            android:textColorHint="@color/edit_text_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_do_login"
            style="@style/TextValue_B"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="38dp"
            android:background="@drawable/round_corner_do_login"
            android:text="@string/btn_do_login"
            android:textColor="@color/main_white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_signup"
            style="@style/TextValue_B"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="164dp"
            android:text="@string/btn_sign_up"
            android:textColor="@color/main_black"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_do_login" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="lottie_coffee.json"
            app:lottie_loop="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
